crates/editor-codec-macros/tests/compile_fail/unknown_bad_shape.stderr
error: #[durable(unknown)] variant must have exactly one UnknownPayload field
 --> tests/compile_fail/unknown_bad_shape.rs:8:5
  |
8 | /     #[durable(unknown)]
9 | |     Unknown { tag: u64 },
  | |________________________^
